--- a/GameData/SpaceY/SpaceYCorp/1.0.0.0.htm
+++ b/GameData/SpaceY/SpaceYCorp/1.0.0.0.htm
@@ -3,7 +3,7 @@
 <p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/209511-*/"
 title="SpaceYCorp forum thread"><img
-src="https://img.shields.io/badge/SpaceYCorp%20(SYC)%20-v0.9.9.9--release-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
+src="https://img.shields.io/badge/SpaceY%20Corp%20(SYC)%20-v1.0.0.0--release-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
 title="1.0.0.0-release" alt="SpaceY Corp (SYC)" /></a><br />
 <a href="http://kerbalspaceprogram.com/"
 title="Kerbal Space Program"><img
@@ -32,7 +32,7 @@ edition</h1>
 </ul></li>
 </ul>
 <div style="border:0.5px solid Tomato; background-color: #bada55; color: #FF0000; text-align:center"><h4>
-<b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/MOD-NAME/files">CurseForge</a></p></div>
+<b>For best results - DO A CLEAN INSTALL; DELETE EXISTING INSTALLATION THEN RE-INSTALL</b></h4><p>Download from <a href="https://www.curseforge.com/kerbal/ksp-mods/spaceycorp/files">CurseForge</a></p></div>
 
 <h2 id="changes">Changes</h2>
 <ul>
