--- a/GameData/SpaceY/SpaceYCorp/readme.htm
+++ b/GameData/SpaceY/SpaceYCorp/readme.htm
@@ -368,7 +368,9 @@ href="https://github.com/zer0Kerbal/SpaceYCorp/projects/">here</a> along
 with <strong><a
 href="https://github.com/users/zer0Kerbal/projects/27">The Short
 List</a></strong></p>
-<p>[<img align="left" alt="zer0Kerbal | kerbalspaceprogram.com" width="32px" src="https://cdn.icon-icons.com/icons2/1381/PNG/32/kerbalspaceprogram_93898.png" />][zedk]
+<p><a
+href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
+title="zer0Kerbal"><img align="left" alt="zer0Kerbal | kerbalspaceprogram.com" width="32px" src="https://cdn.icon-icons.com/icons2/1381/PNG/32/kerbalspaceprogram_93898.png" /></a>
 <a
 href="https://curseforge.com/members/zer0kerbal/projects"><img align="left" alt="zer0Kerbal | CurseForge" width="32px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/curseforge.svg" /></a>
 <a
