--- a/GameData/SpaceY/SpaceYCorp/1.0.4.0.htm
+++ b/GameData/SpaceY/SpaceYCorp/1.0.4.0.htm
@@ -17,7 +17,7 @@ title="GitHub Pages"><img
 src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColor=9cf&amp;logoColor=181717&amp;logo=github/"
 title="GitHub IO" alt="Pages" /></a></p>
 <h2 id="version-1040-release---спасибо-evanisrael-edition">Version
-1.0.4.0-release - <code>&lt;Спасибо evanisrael</code> edition</h2>
+1.0.4.0-release - <code>&lt;Спасибо evanisrael&gt;</code> edition</h2>
 <ul>
 <li>Released
 <ul>
